...
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_request"
        android:enabled="true"
        android:title="Requests" />
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:title="Feed"/>
    <item
        android:id="@+id/action_trade"
        android:enabled="true"
        android:title="Collectibles"/>
...
