<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="cmput301f17t12.quirks.Activities.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/hometitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_feed"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/mapButton"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Map"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"/>

        <RelativeLayout
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hometitle"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/filterbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/filterTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="Filter:"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/applyFilterButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_toEndOf="@+id/filterTextView"
                        android:text="Apply"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/filterTextView" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:text="Filter Value:"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/filterbutton">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/filterValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"/>
            </LinearLayout>
        </RelativeLayout>

        <ListView
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            android:id="@+id/newsfeed_listview"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/filters"
            android:layout_above="@+id/bottom_navigation"/>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/navigation" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
